objects/partdir_mp__App_Resource__c.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__Image_Name__c</fullName>
        <label>Image Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner App</label>
        <referenceTo>partdir_mp__Partner_App__c</referenceTo>
        <relationshipName>ApplicationResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Resource_Data__c</fullName>
        <label>Resource Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Thumbnail_Link__c</fullName>
        <label>Thumbnail Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>App Resource</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>App Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>